--- a/build.gradle
+++ b/build.gradle
@@ -3,18 +3,30 @@
 buildscript {
     repositories {
         jcenter()
+        google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.51"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+//        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.51"
+//        compile "org.jetbrains.kotlin:kotlin-stdlib:1.2.51"
+//        compile "org.jetbrains.kotlin:kotlin-reflect:1.2.51"
+//
+//        //rx kotlin
+//        compile "io.reactivex.rxjava2:rxkotlin:2.1.0"
+
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
