--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.20'
+
     repositories {
         jcenter()
         google()
@@ -20,7 +22,7 @@ buildscript {
 //        //rx kotlin
 //        compile "io.reactivex.rxjava2:rxkotlin:2.1.0"
 
-    }
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 allprojects {
