--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".sidebar.QuickLocationBarActivity">
+        </activity>
         <activity android:name=".spanhtml.SpanAndHtmlActivity">
         </activity>
         <activity
